[package]
name = "gam"
version = "0.1.0"
authors = ["Holger Kibur <holger.kibur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
bevy = "0.5.0"
serde = {features = ["derive"]}
rand = "0.8"
enum_dispatch = "0.3.7"
nalgebra = "0.27.1"
stable-vec = "0.4.0"