[package]
name = "gam"
version = "0.1.0"
authors = ["Holger Kibur <holger.kibur@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
bevy = "0.5"
rand = "0.8"
enum_dispatch = "0.3.7"
nalgebra = "0.27.1"
float-cmp = "0.9.0"
# sdf = {path = "./sdf"}